# catbyte-toolkit

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
cb/: __init__.py  __main__.py  cli.py  config.py  disasm.py  elf_utils.py  ghidra_bridge.py  lldb_bridge.py  macho.py  output.py  result_cache.py  services.py  store.py  validation.py
cb/commands/: attack.py  audit.py  bundle.py  cache.py  callgraph.py  context.py  crash.py  crypto.py  db.py  diff.py  fuzz.py  gadget.py  ghidra.py  grep.py  heap.py  hook.py  ipc.py  kernel_diff.py  kernel_vuln.py  lldb.py  models.py  objc.py  plan.py  probe.py  report.py  sandbox.py  session.py  struct.py  taint.py  triage.py  variant.py  verify.py  vuln.py  web.py
cb/crypto/: __init__.py  constants.py  diff.py  heuristics.py  report.py  scanner.py  secrets.py  xray.py  xref.py
cb/ghidra_scripts/: CallGraph.java  DecompileFunction.java  DiffFunctions.java  ExtractTypes.java  FindXrefs.java  ListFunctions.java  SearchDecompiled.java  TaintAnalysis.java  XPCProtocol.java
cb/lldb_scripts/: lldb_breakpoint.py  (+8 more)
tests/: test_bundle.py  test_bundle_deep.py  test_chrome_patterns.py  test_config.py  test_context.py  test_cross_platform.py  test_crypto.py  test_disasm.py  test_exploit_modules.py  test_ghidra_bridge.py  test_graceful_degradation.py  test_integration.py  test_ipc_deep.py  test_ipc_mojo.py  test_lldb_bridge.py  test_macho.py  test_models.py  test_new_features.py  test_output.py  test_parallel_batch.py  test_patterns.py  test_plan.py  test_plugins.py  test_report.py  test_result_cache.py  test_sandbox_deep.py  test_session.py  test_store.py  test_validation.py  test_verify.py  test_vuln_compact.py  test_web.py
(+10 files in other folders)
